[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ptab-cli"
version = "0.1.4"
description = "USPTO PTAB Trial proceedings CLI — search IPR/PGR/CBM decisions from the terminal"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "rich>=13.0",
]
keywords = ["ptab", "ipr", "pgr", "uspto", "patent", "cli", "trial"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

[project.urls]
Homepage = "https://github.com/noaa/ptab-cli"

[project.scripts]
ptab = "ptab_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ptab_cli"]

[dependency-groups]
dev = [
    "python-dotenv>=1.0",   # 개발 환경 .env 로드용 (배포 환경에서는 불필요)
    "hatchling>=1.29.0",
    "twine>=6.0",
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff.lint]
select = ["E", "F", "I"]
